2007-11-11  Eric Hodel  <drbrain@segment7.net>

	* Rakefile: Tasks for maintaining ruby trunk export of RubyGems.

2007-11-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb: Set #original_platform only once.
	* lib/rubygems/indexer.rb: Handle legacy platforms.
	* lib/rubygems/platform.rb: Gem::Platform is a valid argument.  Bug
	#15511 submitted by Daniel Berger.
	* lib/rubygems/custom_require.rb: Fix compatibility with 1.8.2.  Bug
	#14933 submitted by Aaron Patterson.
	* lib/rubygems/command.rb: Now '-V' enables verbose.  Bug #14951
	submitted by Sasa Ebach.
	* lib/rubygems/commands/check_command.rb: Change use of '-v', '-V' to
	match above.
	* lib/rubygems/package.rb: #send! is gone again.
	* lib/rubygems.rb: Don't add custom_require for 1.9.
	* test/*: Make compatible with 1.9 import.

2007-10-30  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb: Don't re-use @platform to maintain
	backwards compatibility.
	* lib/rubygems/platform.rb: Handle nil and 'ruby' platforms in ::new.

2007-10-20	Daniel Berger	<djberg96@gmail.com>

	* lib/rubygems/uninstaller.rb: Changed '.cmd' to '.bat' in the
	remove_executables method for MS Windows. Patch from Luis Lavena.

2007-10-18  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems_version.rb: 0.9.4.6 beta.

2007-10-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/update_command.rb: Don't install with
	dependencies when updating.  This is a hack.

2007-10-19  Daniel Berger  <djberg96@gmail.com>

	* setup.rb: gem.cmd stub is now gem.cmd, and the stub generation was
	changed - now better for NT. Patch #14725 (Luis Lavena).
	* lib/rubygems/installer.rb: Same as for setup.rb.

2007-10-18  Daniel Berger  <djberg96@gmail.com>

	* lib/rubygems/platform.rb: Modified the Platform.local method for MS
	Windows for versions built with VC++ 6. Patch #14727 (Luis Lavena).
	* test/test_gem_specification.rb: Added version independent tests for